# automated-mission-classifier

./: .gitignore  README.md  pyproject.toml
automated_mission_classifier/: __init__.py  __main__.py  analyzer.py  models.py  reporting.py
automated_mission_classifier/analysis/: __init__.py  science.py
automated_mission_classifier/clients/: cohere.py  openai.py
automated_mission_classifier/utils/: __init__.py  prompts.py
prompts/: rerank_science_query.txt  science_system.txt  science_user.txt
tests/: test_cache.py  test_models.py  test_prompts.py  test_text_extractor.py
