[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-mission-classifier"
version = "0.1.0"
description = "Classify papers as science or non-science for MAST missions using LLM analysis"
readme = "README.md"
authors = [
    {name = "STScI"},
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "cohere>=5.0.0",
    "nltk>=3.8",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "numpy>=1.23.5,<2.3.0",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.scripts]
amc = "automated_mission_classifier.__main__:main"

[tool.setuptools.packages.find]
include = ["automated_mission_classifier*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 120
target-version = "py38"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
